--- a/index.html
+++ b/index.html
@@ -23,27 +23,40 @@
             <div class="col-3"></div>
         </div>
     </div>
+
+    <!-- Show recipe -->
     <div class="container mt-5">
         <div class="row">
             <div class="col-4"></div>
             <div class="col-4">
-                <table class="table table-borderless" id="recipe-result"></table>
+                <table class="table table-borderless" id="recipe-data"></table>
             </div>
             <div class="col-4"></div>
         </div>
     </div>
 
+        <!-- ingredien -->
     <div class="container mt-5">
         <div class="row">
-           <div class="col-4">
+           <div class="col-6">
                 <table class="table table-borderless" id="ingredien"></table>
            </div>
-           <div class="col-4"></div>
-           <div class="col-4"></div>
+           <div class="col-6">
+            <p id="step"></p>
            </div>
            
         </div>
     </div>
+
+    <!-- <div class="container float-left">
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-6">
+               
+            </div>
+            <div class="col-3"></div>
+        </div>
+    </div> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/project.js"></script>
