--- a/index.html
+++ b/index.html
@@ -6,16 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Projcet jQuery</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">\
+    <link rel="stylesheet" href="css/style.css">
 </head>
-    <style>
-        .ruler {
-            border-left: 1px solid blue;
-            height: 50%;
-            position: absolute;
-            left: 50%;
-        }
-    </style>
 <body>
     <div class="container mt-5">
         <div class="row">
@@ -63,10 +56,12 @@
             <div class="text-center ruler" id="ruler"></div>
             <div class="row">
                 <div class="col-6">
+                    <h2 id = "a">Ingredients</h2>
                     <table id="ingredients" class="table table-borderless"></table>
                 </div>
-                <div class="col-6">
-                    <p id="step"></p>
+                <div class="col-6" >
+                    <h2 id="b">Instructon</h2>
+                    <p id="step" ></p>
                 </div>
             </div>
         </div>
@@ -75,6 +70,7 @@
             <div class="row" id="result"></div>
         </div>
 
+        
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/project.js"></script>
 </body>
