--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Projcet jQuery</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">\
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+
+    <marquee id="marquee" behavior="40%" direction="30%">
+                WELCOME TO OUR RECIPE OF FOOD WEBSITE IN PASSERELLES NUMERIQUES CAMBODIA IN PHNOM PHENH WE HOPE YOU WILL ENJOYING WITH OUR WEBSITE THANK YOU VERY MUCH FOR COMMING TO VISITED OUR WEBSITE... 
+    </marquee>
     <div class="container mt-5">
         <div class="row">
             <div class="col-3"></div>
@@ -43,7 +47,7 @@
                     <div class="input-group-append">
                         <button class="btn btn-primary" type="button" id="minus">&minus;</button>
                     </div>
-                    <input type="text" class="form-control text-center" disabled id="member" value="1">
+                    <input type="text" class="form-control text-center" disabled id="people" value="1">
                     <div class="input-group-append">
                         <button class="btn btn-primary" type="button" id="add">&plus;</button>
                     </div>
@@ -54,7 +58,7 @@
         </div>
 
         <div class="container mt-5">
-            <div class="text-center ruler" id="ruler"></div>
+            <!-- <div class="text-center ruler" id="ruler"></div> -->
             <div class="row">
                 <div class="col-6">
                     <h2 id="a">Ingredients</h2>
